# lapleaderboard

./: README.md  app.yaml  config.py  main.py  models.py  pyproject.toml  requirements.txt
blueprints/: admin.py  public.py
static/: style.css
templates/: admin.html  base.html  car.html  index.html
